# test_django_shop

./: README.md  requirements.txt
my-shop/: .coveragerc  Pipfile  README.md  package.json  pyproject.toml  worker.py
my-shop/docs/: Makefile  conf.py  index.rst  make.bat
my-shop/docs/pycharm/: configuration.rst
my-shop/myshop/: admin.py  apps.py  cms_apps.py  cms_wizards.py  models.py  modifiers.py  search_indexes.py  serializers.py  settings.py  urls.py
my-shop/myshop/management/: serializers.py  translation.py
my-shop/myshop/management/commands/: assign_iconfonts.py  create_social_icons.py  download_workdir.py  export_products.py  import_products.py  initialize_shop_demo.py
my-shop/myshop/migrations/: 0001_initial.py
my-shop/myshop/templates/myshop/catalog/: commodity-add2cart.html  smartcard-detail.html  smartphone-add2cart.html
my-shop/myshop/templates/myshop/email/: base.html  password-reset-body.html  register-user-body.html
my-shop/myshop/templates/myshop/pages/: base.html  default.html  navbar.html  test.html
my-shop/myshop/templates/myshop/print/: delivery-note.html  invoice.html
